log/build_2021-10-30_19-45-51/controller/stderr.log
  File "/home/ghost/Desktop/dev_ws/install/controller/lib/python3.8/site-packages/controller/coco.py", line 57
    def
       ^
SyntaxError: invalid syntax

